noinst_LTLIBRARIES = libtools.la

libtools_la_SOURCES = ring.c rtimer_std.c rtimer.c sig_calc.c \
	rgraph.c rcomb.c user.c file_tools.c ports.c \
	rtimer_common.h rtimer_papi.h rtimer_std.h ports.h \
	rtimer.h sig_calc_priv.h tools_priv.h rcomb.h rgraph.h ring.h

pkginclude_HEADERS = lib_tools.h sig_calc.h
